# swashes-python

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  tests.yml
src/swashes/: __init__.py  runner.py
tests/: test_swashes.py
